--- a/src/container/bio.hbs
+++ b/src/container/bio.hbs
@@ -2,77 +2,76 @@
 Це код container файлу для summary сторінки, 
 в якому міститься код, котрий буде віддаватися по шляху (PATH) - "/summary"
 --}}
-
-<div>
-   <div>
-        <h1>(Bio)</h1>
-    </div>
-    <h2>
-    <div><i>name:</i> {{name}}</div></h2>
-    <h3><div><i>birthdate:</i> {{birthdate}}</div><div><i>birthplace:</i> {{birthplace}}</div><div><i>deathdate:</i> {{deathdate}}</div>
-    <div><i>deathplace:</i> {{deathplace}}</div><div><i>nationality:</i> {{nationality}}</div><div><i>occupation:</i> {{occupation}}</div>
-    <div><i>known_for:</i> {{known_for}}</div></h3>
-    
-    <hr>
-    <section>    
-    {{#each education}}
-       {{> title data="Education" big=true}}
-       <br>
-            <div>degree: {{degree}}</div><div>field: {{field}}</div>
-            <div>institution: {{institution}}</div><div>year: {{year}}</div>
-    {{/each}}
-    </section>
-    <hr>
-    <section>
-        <section> <b>"Notable_publications"</b> </section>
-        {{#each notable_publications}}
-            <div>title: {{title}}</div><div>year: {{year}}</div><div>publisher: {{publisher}}</div>
-        {{/each}}
-    </section>
-    <hr>
-    <section>
-        <section> <b>"Partners"</b> </section>
-        {{#each partners}}
-            <div>name: {{name}}</div><div>relationship: {{relationship}}</div><div>years: {{years}}</div>
-        {{/each}}
-    </section>
-    <hr>
-    <section>
-        {{#each awards}}
-        <section> <b>"Awards"</b> </section>
-                <div>title: {{title}}</div><div>year: {{year}}</div><div>description: {{description}}</div>
-        {{/each}}
-    </section>
-    <hr>
+<main class="m-5">
     <div>
-        <section> <b>"Influences"</b> </section>
-            <p>{{influences}}</p>
-    </div>
-     <hr>
-    <div>
-        <section> <b>"Influenced"</b> </section>
-            {{influenced}}
-    </div>
-    <hr>
-    <div>
-        <section> <b>"Quotes"</b> </section>
-            <p>{{quotes}}</p>
-    </div>
-    <hr>
-    <section>
-        {{#each major_discoveries}}
-        <section> <b>"Major_discoveries"</b> </section>
-                <div>title: {{title}}</div><div>year: {{year}}</div><div>description: {{description}}</div>
+            <h1>(Bio)</h1>
+        </div>
+        <h2>
+        <div><i>name:</i> {{name}}</div></h2>
+        <h3><div><i>birthdate:</i> {{birthdate}}</div><div><i>birthplace:</i> {{birthplace}}</div><div><i>deathdate:</i> {{deathdate}}</div>
+        <div><i>deathplace:</i> {{deathplace}}</div><div><i>nationality:</i> {{nationality}}</div><div><i>occupation:</i> {{occupation}}</div>
+        <div><i>known_for:</i> {{known_for}}</div></h3>
+        
+        <hr>
+        <section>    
+        {{#each education}}
+        {{> title data="Education" big=true}}
+        <br>
+                <div>degree: {{degree}}</div><div>field: {{field}}</div>
+                <div>institution: {{institution}}</div><div>year: {{year}}</div>
         {{/each}}
-    </section>
-    <hr>
-    <section>
-        {{#with contributions}}
-            <div>title: {{title}}</div><div>description: <i>{{description}}</i></div><div> year: {{year}}</div><div>field: {{field}}</div>
-        {{/with}}
-    </section>
-    
-</div>
+        </section>
+        <hr>
+        <section>
+            <section> <b>"Notable_publications"</b> </section>
+            {{#each notable_publications}}
+                <div>title: {{title}}</div><div>year: {{year}}</div><div>publisher: {{publisher}}</div>
+            {{/each}}
+        </section>
+        <hr>
+        <section>
+            <section> <b>"Partners"</b> </section>
+            {{#each partners}}
+                <div>name: {{name}}</div><div>relationship: {{relationship}}</div><div>years: {{years}}</div>
+            {{/each}}
+        </section>
+        <hr>
+        <section>
+            {{#each awards}}
+            <section> <b>"Awards"</b> </section>
+                    <div>title: {{title}}</div><div>year: {{year}}</div><div>description: {{description}}</div>
+            {{/each}}
+        </section>
+        <hr>
+        <div>
+            <section> <b>"Influences"</b> </section>
+                <p>{{influences}}</p>
+        </div>
+        <hr>
+        <div>
+            <section> <b>"Influenced"</b> </section>
+                {{influenced}}
+        </div>
+        <hr>
+        <div>
+            <section> <b>"Quotes"</b> </section>
+                <p>{{quotes}}</p>
+        </div>
+        <hr>
+        <section>
+            {{#each major_discoveries}}
+            <section> <b>"Major_discoveries"</b> </section>
+                    <div>title: {{title}}</div><div>year: {{year}}</div><div>description: {{description}}</div>
+            {{/each}}
+        </section>
+        <hr>
+        <section>
+            {{#with contributions}}
+                <div>title: {{title}}</div><div>description: <i>{{description}}</i></div><div> year: {{year}}</div><div>field: {{field}}</div>
+            {{/with}}
+        </section>
+    </div>
+</main>
 
 {{!-- 
     Цей код містить лише те, що буде виводитись в {{{body}}} в layout/default.hbs
